--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
   "name": "d3-table-cards",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "description": "Table/Cards views using D3.js for animated transitions.",
   "author": "Olivier Giulieri (https://evoluteur.github.io/)",
-  "copyright": "(c) 2019 Olivier Giulieri",
+  "copyright": "(c) 2020 Olivier Giulieri",
   "repository": {
     "type": "git",
     "url": "https://github.com/evoluteur/d3-table-cards.git"
   },
   "license": "MIT",
-  "homepage": "https://github.com/evoluteur/d3-table-cards",
+  "homepage": "https://evoluteur.github.io/d3-table-cards/",
   "bugs": "https://github.com/evoluteur/d3-table-cards/issues",
   "keywords": [
     "d3", 
-    "d3v4", 
+    "d3v6", 
     "transition", 
     "animation", 
     "list", 
     "table", 
+    "view",
+    "layout",
     "cards", 
     "d3js", 
     "javascript", 
